--- a/app/views/contexts.scala.html
+++ b/app/views/contexts.scala.html
@@ -7,7 +7,7 @@
 <body>
 <ul>
     @for(context <- contexts) {
-    <li>@context.name</li>
+    <li>@context.name [@context.id]</li>
     }
 </ul>
 </body>
