--- a/app/views/board.scala.html
+++ b/app/views/board.scala.html
@@ -12,6 +12,7 @@
         }
 
         function drag(ev) {
+            alert(ev)
             ev.dataTransfer.setData("Text", ev.target.id);
         }
 
